src/assets/index.css
:root[data-theme="light"] {
  --text-50: oklch(96.07% 0.002 247.84);
  --text-100: oklch(92.32% 0.004 236.50);
  --text-200: oklch(84.28% 0.009 247.93);
  --text-300: oklch(76.30% 0.012 243.70);
  --text-400: oklch(67.86% 0.017 248.08);
  --text-500: oklch(59.15% 0.023 250.52);
  --text-600: oklch(50.57% 0.018 248.19);
  --text-700: oklch(41.37% 0.014 252.24);
  --text-800: oklch(31.82% 0.011 248.18);
  --text-900: oklch(21.54% 0.006 236.85);
  --text-950: oklch(15.83% 0.003 248.00);

  --background-50: oklch(96.37% 0.006 211.04);
  --background-100: oklch(92.73% 0.011 217.55);
  --background-200: oklch(85.16% 0.023 221.86);
  --background-300: oklch(77.68% 0.035 220.66);
  --background-400: oklch(70.17% 0.045 220.83);
  --background-500: oklch(62.23% 0.056 221.30);
  --background-600: oklch(53.21% 0.047 221.37);
  --background-700: oklch(43.43% 0.038 221.51);
  --background-800: oklch(33.13% 0.027 222.84);
  --background-900: oklch(22.25% 0.016 218.22);
  --background-950: oklch(16.03% 0.008 229.50);

  --primary-50: oklch(96.32% 0.022 230.54);
  --primary-100: oklch(92.80% 0.042 231.71);
  --primary-200: oklch(85.98% 0.083 232.88);
  --primary-300: oklch(79.73% 0.120 234.93);
  --primary-400: oklch(74.45% 0.150 237.97);
  --primary-500: oklch(69.81% 0.171 243.77);
  --primary-600: oklch(59.27% 0.144 243.18);
  --primary-700: oklch(47.99% 0.116 242.91);
  --primary-800: oklch(36.26% 0.085 241.36);
  --primary-900: oklch(23.48% 0.051 237.09);
  --primary-950: oklch(16.63% 0.033 229.71);

  --secondary-50: oklch(96.29% 0.015 228.96);
  --secondary-100: oklch(92.68% 0.029 230.30);
  --secondary-200: oklch(85.47% 0.058 231.00);
  --secondary-300: oklch(78.23% 0.087 233.24);
  --secondary-400: oklch(71.53% 0.112 234.92);
  --secondary-500: oklch(65.30% 0.133 238.17);
  --secondary-600: oklch(55.47% 0.111 238.05);
  --secondary-700: oklch(45.18% 0.089 237.88);
  --secondary-800: oklch(34.56% 0.064 236.07);
  --secondary-900: oklch(22.75% 0.037 234.36);
  --secondary-950: oklch(16.09% 0.023 235.03);

  --accent-50: oklch(96.44% 0.019 230.69);
  --accent-100: oklch(92.70% 0.037 231.92);
  --accent-200: oklch(85.88% 0.074 231.62);
  --accent-300: oklch(79.26% 0.110 234.05);
  --accent-400: oklch(73.24% 0.138 237.17);
  --accent-500: oklch(68.20% 0.158 241.74);
  --accent-600: oklch(57.77% 0.134 241.78);
  --accent-700: oklch(47.10% 0.107 241.07);
  --accent-800: oklch(35.74% 0.077 239.04);
  --accent-900: oklch(23.12% 0.046 236.91);
  --accent-950: oklch(16.25% 0.030 229.64);

}
:root[data-theme="dark"] {
  --text-50: oklch(15.72% 0.004 229.10);
  --text-100: oklch(21.26% 0.007 258.37);
  --text-200: oklch(31.82% 0.011 248.18);
  --text-300: oklch(41.32% 0.016 251.74);
  --text-400: oklch(50.53% 0.020 248.23);
  --text-500: oklch(59.11% 0.024 250.37);
  --text-600: oklch(67.81% 0.019 248.10);
  --text-700: oklch(76.26% 0.013 244.31);
  --text-800: oklch(84.28% 0.009 247.93);
  --text-900: oklch(92.32% 0.004 236.50);
  --text-950: oklch(96.10% 0.003 264.54);

  --background-50: oklch(16.03% 0.008 229.50);
  --background-100: oklch(22.25% 0.016 218.22);
  --background-200: oklch(33.13% 0.027 222.84);
  --background-300: oklch(43.43% 0.038 221.51);
  --background-400: oklch(53.21% 0.047 221.37);
  --background-500: oklch(62.23% 0.056 221.30);
  --background-600: oklch(70.17% 0.045 220.83);
  --background-700: oklch(77.68% 0.035 220.66);
  --background-800: oklch(85.16% 0.023 221.86);
  --background-900: oklch(92.73% 0.011 217.55);
  --background-950: oklch(96.37% 0.006 211.04);

  --primary-50: oklch(16.63% 0.033 229.71);
  --primary-100: oklch(23.48% 0.051 237.09);
  --primary-200: oklch(36.26% 0.085 241.36);
  --primary-300: oklch(47.99% 0.116 242.91);
  --primary-400: oklch(59.27% 0.144 243.18);
  --primary-500: oklch(69.81% 0.171 243.77);
  --primary-600: oklch(74.45% 0.150 237.97);
  --primary-700: oklch(79.73% 0.120 234.93);
  --primary-800: oklch(85.98% 0.083 232.88);
  --primary-900: oklch(92.80% 0.042 231.71);
  --primary-950: oklch(96.32% 0.022 230.54);

  --secondary-50: oklch(16.09% 0.023 235.03);
  --secondary-100: oklch(22.75% 0.037 234.36);
  --secondary-200: oklch(34.56% 0.064 236.07);
  --secondary-300: oklch(45.18% 0.089 237.88);
  --secondary-400: oklch(55.47% 0.111 238.05);
  --secondary-500: oklch(65.30% 0.133 238.17);
  --secondary-600: oklch(71.53% 0.112 234.92);
  --secondary-700: oklch(78.23% 0.087 233.24);
  --secondary-800: oklch(85.47% 0.058 231.00);
  --secondary-900: oklch(92.68% 0.029 230.30);
  --secondary-950: oklch(96.29% 0.015 228.96);

  --accent-50: oklch(16.25% 0.030 229.64);
  --accent-100: oklch(23.12% 0.046 236.91);
  --accent-200: oklch(35.74% 0.077 239.04);
  --accent-300: oklch(47.10% 0.107 241.07);
  --accent-400: oklch(57.77% 0.134 241.78);
  --accent-500: oklch(68.20% 0.158 241.74);
  --accent-600: oklch(73.24% 0.138 237.17);
  --accent-700: oklch(79.26% 0.110 234.05);
  --accent-800: oklch(85.88% 0.074 231.62);
  --accent-900: oklch(92.70% 0.037 231.92);
  --accent-950: oklch(96.44% 0.019 230.69);
}
:root {
    --bs-heading-color: var(--text-900);
    --bs-body-color: var(--text-800);
    --rounded: calc(Infinity * 1px);
}
html {
    background-color: var(--background-50);
    color: var(--text-950);
    font-family: var(--young-serif);
}
body {
    transition: all 0.25s ease;
    transition-property: background-color, color;
}
ul[class] {
    list-style-type: none;
}
@property --dot-bg-color {
    syntax: '<color>';
    inherits: false;
}
@property --dot-size {
    syntax: '<length>';
    inherits: false;
    initial-value: 1px;
}
.dot-bg body::after {
    --dot-bg-color: var(--accent-200);
    content: '';
    position: fixed;
    inset: 0;
    z-index: 0;
    background-image: radial-gradient(var(--dot-bg-color) var(--dot-size), transparent 0);
    background-size: 20px 20px;
    background-position: -20px -20px;
    transition: all 0.25s ease;
    transition-property: --dot-bg-color, --dot-size;
}
.dot-bg[data-theme="light"] body::after {
    --dot-size: 1.5px;
}
.dot-bg body > * {
    position: relative;
    z-index: 1;
}
footer {
    background-color: var(--accent-200);
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.cta-form {
    position: relative;
    --background: var(--background-800);
    --color: var(--text-100);
    --input-bg: var(--background-200);
    --input-label: var(--text-900);
    --bs-heading-color: var(--color);
}
.cta-form + footer {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}
.cta-form::after {
    content: '';
    background-color: var(--accent-200);
    height: 10vh;
    width: 100%;
    position: absolute;
    bottom: 0;
    z-index: 0;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
}
.cta-controls {
    background-color: var(--background);
    position: relative;
    z-index: 1;
    padding: 1rem 1.5rem;
    border-radius: 25px;
    color: var(--color)
}
.cta-controls .form-control {
    background-color: var(--input-bg);
    color: var(--input-label);
    border-color: var(--input-bg);
    border-top-left-radius: var(--rounded);
    border-bottom-left-radius: var(--rounded);
    padding-left: 2.75ch;
}
.cta-controls label {
    color: var(--input-label);
    padding-left: 3ch;
}
.cta-controls .btn {
    background-color: var(--input-bg);
    color: var(--input-label);
    border: 1px solid var(--input-bg);
    border-top-right-radius: var(--rounded);
    border-bottom-right-radius: var(--rounded);
    padding-right: 3ch;
    &:hover {
        background-color: var(--input-label);
        color: var(--input-bg);
    }
}

.text-secondary {
    color: var(--secondary-900) !important;
}

button {
    background-color: var(--accent-200);
    padding: 0.5em 1em;
    border: 1px solid var(--accent-300);
    border-radius: 5px;
    font-weight: bold;;
    color: var(--accent-800);
}
p {
    font-family: var(--bs-font-sans-serif);
    strong {
        font-family: var(--young-serif);
    }
}
h1,h2,h3,h4,h5,
.h1,.h2,.h3,.h4,.h5 {
    font-family: var(--young-serif)
}
.nav-link {
    color: inherit;
}

